v3.6.0/_sources/index.rst.txt
.. Horace documentation master index file


.. toctree::
   :hidden:

   The_Horace_Rationale

   Download_and_setup
   Download_and_Setup_Troubleshutting
   Support_and_updates

   Getting_started
   Advanced_use
   Horace_GUI

   Changing_Horace_settings
   Planning_a_Horace_scan
   Generating_SQW_files
   Manipulating_and_extracting_data_from_SQW_files_and_objects
   Correcting_for_sample_misalignment
   Data_diagnostics
   Symmetrising_etc
   Unary_operations
   Binary_operations
   Plotting
   Simulation
   Multifit
   Advanced_Multifit
   Tobyfit
   List_of_functions
   Input_file_formats
   FAQ

   Example_scripts

   How_to_cite_Horace
   Papers_citing_Horace

   Known_bugs
   Become_a_developer
   For_Developers
   Developer_info

   General_disclaimer
   Privacy_policy

   [NULL] <Changing_object_type>
   [NULL] <Developer_information>
   [NULL] <Fitting>
   [NULL] <Herbert>
   [NULL] <Horace_and_Libisis_installation>
   [NULL] <Horace_command_line>
   [NULL] <New>
   [NULL] <Read_or_write_to_disk>
   [NULL] <Remote_data_analysis>
   [NULL] <Reshaping_etc>
   [NULL] <Run_inspector>
   [NULL] <Script_for_correcting_sample_misalignment>
   [NULL] <Script_for_data_treatment>
   [NULL] <Script_for_fitting>
   [NULL] <Script_for_generating_sqw_files>
   [NULL] <Script_for_making_cuts_and_plotting>
   [NULL] <Script_for_making_publication_quality_figures>
   [NULL] <Script_for_making_simulations>
   [NULL] <Script_for_planning_an_experiment>
   [NULL] <s_new>


Horace: visualising and manipulating S(**Q**,w) measured in all four dimensions
===============================================================================

Horace is a suite of programs for the visualisation and analysis of large datasets from time-of-flight neutron inelastic scattering spectrometers. The theory behind, and application of, Horace has been published in Nuclear Instruments and Methods in Physics Research. It is freely available online `here <http://www.sciencedirect.com/science/article/pii/S016890021630777X>`__, from where you can also download a pdf copy under the `Creative Commons Attribution License <https://creativecommons.org/licenses/by/4.0/>`__. Please cite this paper if you have used Horace in your research. More details about citing Horace can be found :ref:`here <How_to_cite_Horace:How to cite Horace>`.

If you have problem using or installing Horace, found bug or have other questions related to Horace, please contact `our team <mailto:HoraceHelp.stfc.ac.uk>`__, and somebody will come back and try to help you answering your question.
 

Download, support & updates
===========================

- :ref:`Download and setup <Download_and_setup:Download and setup>`

- :ref:`Support and updates <Support_and_updates:Support and updates>`


How to use Horace
=================

- :ref:`Getting started: An introduction to the use of Horace with the Matlab command line <Getting_started:Getting started>`

- :ref:`Advanced use of Horace with the Matlab command line <Advanced_use:Advanced use>`

- :ref:`Horace Graphical User Interface <Horace_GUI:Horace GUI>`


Horace Manual
=============

- Horace Manual chapters

  - :ref:`Changing Horace settings <Changing_Horace_settings:Changing Horace settings>`

  - :ref:`Planning a Horace scan <Planning_a_Horace_scan:Planning a Horace scan>`

  - :ref:`Generating SQW files <Generating_SQW_files:Generating SQW files>`

  - :ref:`Taking cuts from data; saving, loading and querying cuts on disk <Manipulating_and_extracting_data_from_SQW_files_and_objects:Manipulating and extracting data from SQW files and objects>`

  - :ref:`Correcting for sample misalignment <Correcting_for_sample_misalignment:Correcting for sample misalignment>`

  - :ref:`Data diagnostics <Data_diagnostics:Data diagnostics>`

  - :ref:`Symmetrising etc <Symmetrising_etc:Symmetrising etc>`

  - :ref:`Add, subtract, etc <Binary_operations:Binary operations>`

  - :ref:`Plotting <Plotting:Plotting>`

  - :ref:`Simulation <Simulation:Simulation>`

  - :ref:`Fitting data <Multifit:Multifit>`

  - :ref:`Fitting with resolution function convolution <Tobyfit:Tobyfit>`


- :ref:`Complete list of functions <List_of_functions:List of functions>`

- :ref:`Input file formats and creating input files <Input_file_formats:Input file formats>`

- :ref:`FAQs <FAQ:FAQ>`


Example scripts
===============

- :ref:`Example scripts <Example_scripts:Example scripts>`


Citing Horace
=============

- :ref:`How to cite Horace <How_to_cite_Horace:How to cite Horace>`

- :ref:`Papers citing Horace <Papers_citing_Horace:Papers citing Horace>`

For Developers
==============

- :ref:`Known bugs <Known_bugs:Known bugs>`

- :ref:`Become a developer <Become_a_developer:Become a developer>`

- :ref:`MediaWiki information <For_Developers:For Developers>`

- :ref:`Developer information <Developer_info:Developer info>`

Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
